# llm-finetuning-demos

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
grpo/: Qwen2_5_(1.5B)_GRPO.ipynb  Qwen2_5_(3B)_GRPO.ipynb
